<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/css_grey"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recipe_avatar" />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name_text"
            android:textColor="#FFFF00"
            android:background="@color/css_grey"
            android:layout_alignBottom="@id/store_image"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/open_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_daily_from_7_00_a_m"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/store_name"
            android:drawableStart="@drawable/ic_alarm_blue"
            android:drawablePadding="11sp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:drawableLeft="@drawable/ic_alarm_blue" />

        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_short_description"
            android:textColor="@color/kinda_black"
            android:layout_below="@id/open_time"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/store_description"
            android:background="@color/real_coral"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/ratingBarSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5"
            android:paddingVertical="8dp"
            android:layout_marginLeft="11sp"
            android:layout_marginStart="11sp" />

        <TextView
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textStyle="bold"
            android:padding="11sp"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_below="@id/rating_bar"
            android:onClick="toggleClicked"
            android:drawablePadding="11sp"
            android:drawableStart="@drawable/ic_thumb_coral"
            android:drawableLeft="@drawable/ic_thumb_coral"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/btn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textStyle="bold"
            android:padding="11sp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rating_bar"
            android:onClick="toggleClicked"
            android:drawablePadding="11sp"
            android:drawableStart="@drawable/ic_comment_coral"
            android:drawableLeft="@drawable/ic_comment_coral" />

        <TextView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textStyle="bold"
            android:padding="11sp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rating_bar"
            android:onClick="toggleClicked"
            android:gravity="center_vertical"
            android:drawablePadding="11sp"
            android:drawableStart="@drawable/ic_share_coral"
            android:drawableLeft="@drawable/ic_share_coral"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>